Changes for Java 21 and Nuix 100.15